crates/rlf-macros/tests/fail/dollar_ref_term.rs
use rlf::rlf;

rlf! {
    card = "card";
    bad($n) = "{$n} {$card}";
}

fn main() {}
